# speech-playground

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  alignment.py  ifmdd.py  kanade_models.json  main.py  models_config.py  pyproject.toml
backend/encoder/: articulatory_inversion.py  hubert.py  kanade.py  sylber.py
backend/tokenizer/: dpdp.py  kmeans.py
frontend/: .env.example  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: EncoderFieldset.svelte  Tooltip.svelte  api.ts  db.ts  errors.ts  regions.ts  types.ts
frontend/src/routes/: +layout.svelte  Analysis.svelte  App.svelte  ArticulatoryFeatures.svelte  AudioLibrary.svelte  AudioPreview.svelte  AudioSelector.svelte  Diff.svelte  ForcedAlignment.svelte  KeepAlive.svelte  PhoneticTranscription.svelte  SampleViewer.svelte  WavesurferRecorder.svelte
frontend/src/routes/api/[...path]/: +server.ts
frontend/src/routes/api/align/: +server.ts
lib/: .gitignore  pyproject.toml
lib/src/speech_playground/: alignment.py
lib/src/speech_playground/encoder/: articulatory_inversion.py  hubert.py  kanade.py  phonological_vector.py  phonseg.py  spidr.py  sylber.py  sylber2.py  syllablelm.py  wavlm.py  zerosyl.py
lib/src/speech_playground/tokenizer/: dpdp.py  kmeans.py
scripts/: encode.py  train_kmeans.py  train_phonological_vectors.py
