[project]
name = "speech-playground-backend"
version = "0.1.0"
description = "Backend for Speech Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119",
    "numpy>=2.3.4",
    "tgt>=1.5",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.2",
    "torchcodec",
    "python-dotenv>=1.0.1",
    "dtw-python>=1.7.2",
    "speech-playground",
]

[project.optional-dependencies]
ifmdd = [
    "speechbrain@git+https://github.com/speechbrain/speechbrain.git@c6d2a8b1836dd86d06404c67d211e518a82fc407",
    "huggingface_hub<1.0",
    "requests",
    "transformers",
    "flashlight-text",
]
kanade = [
    "kanade-tokenizer",
    # flash-attn needs to be installed separately -- see README.md
]
dpdp = ["numba"]
sylber = ["sylber", "traitlets"]
inversion = [
    "loralib",
    "transformers",
]

[tool.uv.sources]
kanade-tokenizer = { git = "https://github.com/frothywater/kanade-tokenizer" }
speech-playground = { path = "../lib", editable = true }
