[project]
name = "speech-playground-backend"
version = "0.1.0"
description = "Backend for Speech Playground"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.119",
    "numpy>=2.3.4",
    "tgt>=1.5",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.2",
    "torchcodec",
    "python-dotenv>=1.0.1",
    "dtw-python>=1.7.2",
    "speech-playground",
]

[project.optional-dependencies]
kanade = [
    "kanade-tokenizer",
]
dpdp = ["numba"]
sylber = ["sylber", "traitlets"]
zerosyl = ["zerosyl>=1.0.5"]
spidr = ["spidr"]
inversion = [
    "loralib",
    "transformers",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchcodec = { index = "pytorch-cu128" }
kanade-tokenizer = { git = "https://github.com/frothywater/kanade-tokenizer" }
speech-playground = { path = "../lib", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
