[project]
name = "speech-playground"
version = "0.1.0"
description = "Library for speech processing"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.3.4",
    "torch>=2.11",
    "torchaudio>=2.11",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.2",
    "torchcodec",
]

[project.optional-dependencies]
kanade = [
    "kanade-tokenizer",
]
dpdp = ["numba"]
sylber = ["sylber", "traitlets"]
zerosyl = ["zerosyl>=1.0.5"]
inversion = [
    "loralib",
    "transformers",
]
